[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "lasps"
version = "7.0.0a1"
description = "LASPS v7a: Sector-Aware Stock Prediction System"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "kiwoom: live Kiwoom OpenAPI tests (require Windows + login)",
    "db: database tests (require PostgreSQL for integration)",
]
